--- a/sassy/_global.scss
+++ b/sassy/_global.scss
@@ -7,10 +7,13 @@ body {
   background-color: rgba(0, 0, 0, 0.2);
   // background-repeat:no-repeat;
   background-size: cover;
+    h3{
+    text-align: center;
+  }
 }
 
 
-$fontRoboto:'Roboto', sans-serif;
+
 
 
 
