--- a/sassy/_global.scss
+++ b/sassy/_global.scss
@@ -1,19 +1,22 @@
+// body {
+//   background:url("./images/alesia-kazantceva-XLm6-fPwK5Q-unsplash 1.png");
+//   background-size: cover;
+//     h3{
+//     text-align: center;
+//   }
+// }
+
 body {
-  background-image:url("./images/alesia-kazantceva-XLm6-fPwK5Q-unsplash 1.png"); 
-  // background:url("") repeat, linear-gradient(to bottom,  #7abcff 0%,#4096ee 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  background: url(image.jpg) no-repeat 0,4 #000000;  
-  // width: 100%;
-  // height: auto;
-  background-color: rgba(0, 0, 0, 0.2);
-  // background-repeat:no-repeat;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url("../images/ofis.png"), rgba(0, 0, 0, 0.6);
+  //  url("https://picsum.photos/800/600?random=1"), rgba(0, 0, 0, 0.3);
+  /* ,url("https://picsum.photos/800/600?random=2"); */
   background-size: cover;
-    h3{
-    text-align: center;
-  }
+  background-blend-mode: multiply;
+  /* background-blend-mode: lighten; */
+    
 }
-
-
-
-
-
-
