--- a/sassy/_navbar.scss
+++ b/sassy/_navbar.scss
@@ -1,45 +1,36 @@
-.navbar{
-    font-family: 'Roboto', sans-serif;
-    background: rgba(150, 145, 145, 0.79);
+.navbar {
+  font-family: "Roboto", sans-serif;
+  width: 100%;
+  height: auto;
+  border-bottom: 1px solid lightgrey;
 }
-.navbar__menu--right{
-    // background-color: rgba(0,0,0,0.3);
-    margin: 10px;
-    list-style: none;
-    float: right;
-    // border: 1px solid red;
-    & li{
-        display: inline;
-        &:first-child a{
-             color: white;
-             
-        }
-        &:last-child a{
-             color: red;
-        }
-        a{  
-            text-decoration: none; 
-            &:hover{
-                
-                text-decoration: underline;
-                
-            }
-        }
+.navbar__menu--right {
+  margin: 10px;
+  list-style: none;
+  float: right;
+  & li {
+    display: inline;
+    &:first-child a {
+          font-size: x-large;
+        margin: 5px;
+      color: white;
     }
-
+    &:last-child a {
+          font-size: x-large;
+        margin: 5px;
+      color: red;
+    }
+    a {
+      text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
 }
-.navbar__logo{
-    // background-color: rgba(0,0,0,0.3);
-    width: 150px;
-    height: 30px;
-    padding: 5px;
-    margin-top: 10px;;
-}
-#register{
-    color: rgb(255, 51, 0);
-    margin: 5px;
-}
-#loging{
-    color: white;
-    margin: 5px;
+.navbar__logo {
+  vertical-align: middle;
+  width: 250px;
+  height: 40px;
+  padding: 5px;
 }
