--- a/sassy/_section.scss
+++ b/sassy/_section.scss
@@ -1,50 +1,43 @@
 h1{
     position: relative;
-    width: 624px;
-    height: 59px;
-    // text-align: center;
+    width: 100%;
+    height: auto;
     margin: auto;
-    padding-top:50px;
+    text-align: center;
+    padding-top:100px;
     font-family: Modak;
     font-style: normal;
     font-weight: normal;
-    font-size: 54px;
+    font-size: 100px;
     line-height: 81px;
-    
     color: #FFFFFF;
 
-    
-    // position: absolute;
-    // background-color: rgba(0,0,0,0.3);
-    
- 
 }
 .main{
-    position: absolute;
     width:100%;
     height:100%;
-    background: rgba(150, 145, 145, 0.79);
-    // z-index: -1;
         &__hero{
     
         padding: 10px;
         background-color: white;
-        width:288px;
-        height: 140px;
+        width:300px;
+        height:500;
         border: 1px solid #000000;
         border-radius: 12px;
         box-sizing: border-box;
         position: absolute;
         float: right;
         
-        top: 300px;
-        right:100px;
+        top: 550px;
+        right:350px;
         font-size: 1rem;
             &--list{
-                padding:10px;
+                padding:20px;
+                // padding-left: 25px;
                 list-style: circle;
                 font-family: 'Roboto', sans-serif;
-                font-size: 18px;
+                font-style:normal;
+                font-size: 25px;
             }
         
     
