--- a/style.css
+++ b/style.css
@@ -4,18 +4,23 @@
 }
 
 body {
-  background-image: url("./images/alesia-kazantceva-XLm6-fPwK5Q-unsplash 1.png");
-  background: url(image.jpg) no-repeat 0, 4 #000000;
-  background-color: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url("../images/ofis.png"), rgba(0, 0, 0, 0.6);
+  /* ,url("https://picsum.photos/800/600?random=2"); */
   background-size: cover;
-}
-body h3 {
-  text-align: center;
+  background-blend-mode: multiply;
+  /* background-blend-mode: lighten; */
 }
 
 .navbar {
   font-family: "Roboto", sans-serif;
-  background: rgba(150, 145, 145, 0.79);
+  width: 100%;
+  height: auto;
+  border-bottom: 1px solid lightgrey;
 }
 
 .navbar__menu--right {
@@ -27,9 +32,13 @@ body h3 {
   display: inline;
 }
 .navbar__menu--right li:first-child a {
+  font-size: x-large;
+  margin: 5px;
   color: white;
 }
 .navbar__menu--right li:last-child a {
+  font-size: x-large;
+  margin: 5px;
   color: red;
 }
 .navbar__menu--right li a {
@@ -40,61 +49,51 @@ body h3 {
 }
 
 .navbar__logo {
-  width: 150px;
-  height: 30px;
+  vertical-align: middle;
+  width: 250px;
+  height: 40px;
   padding: 5px;
-  margin-top: 10px;
-}
-
-#register {
-  color: #ff3300;
-  margin: 5px;
-}
-
-#loging {
-  color: white;
-  margin: 5px;
 }
 
 h1 {
   position: relative;
-  width: 624px;
-  height: 59px;
+  width: 100%;
+  height: auto;
   margin: auto;
-  padding-top: 50px;
+  text-align: center;
+  padding-top: 100px;
   font-family: Modak;
   font-style: normal;
   font-weight: normal;
-  font-size: 54px;
+  font-size: 100px;
   line-height: 81px;
   color: #FFFFFF;
 }
 
 .main {
-  position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(150, 145, 145, 0.79);
 }
 .main__hero {
   padding: 10px;
   background-color: white;
-  width: 288px;
-  height: 140px;
+  width: 300px;
+  height: 500;
   border: 1px solid #000000;
   border-radius: 12px;
   box-sizing: border-box;
   position: absolute;
   float: right;
-  top: 300px;
-  right: 100px;
+  top: 550px;
+  right: 350px;
   font-size: 1rem;
 }
 .main__hero--list {
-  padding: 10px;
+  padding: 20px;
   list-style: circle;
   font-family: "Roboto", sans-serif;
-  font-size: 18px;
+  font-style: normal;
+  font-size: 25px;
 }
 
 /*# sourceMappingURL=style.css.map */
