--- a/sassy/_global.scss
+++ b/sassy/_global.scss
@@ -1,22 +1,23 @@
-// body {
-//   background:url("./images/alesia-kazantceva-XLm6-fPwK5Q-unsplash 1.png");
-//   background-size: cover;
-//     h3{
-//     text-align: center;
-//   }
-// }
-
 body {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: url("../images/ofis.png"), rgba(0, 0, 0, 0.6);
-  //  url("https://picsum.photos/800/600?random=1"), rgba(0, 0, 0, 0.3);
-  /* ,url("https://picsum.photos/800/600?random=2"); */
+  background:url("https://images.unsplash.com/photo-1497215842964-222b430dc094?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80"), rgba(0, 0, 0, 0.5);
   background-size: cover;
   background-blend-mode: multiply;
-  /* background-blend-mode: lighten; */
-    
+     h3{
+    text-align: center;
+  }
 }
+// sass --watch ./sassy/style.scss:style.css
+// body {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   bottom: 0;
+//   background: url("../images/ofis.png"), rgba(0, 0, 0, 0.6);
+//   //  url("https://picsum.photos/800/600?random=1"), rgba(0, 0, 0, 0.3);
+//   /* ,url("https://picsum.photos/800/600?random=2"); */
+//   background-size: cover;
+//   background-blend-mode: multiply;
+//   /* background-blend-mode: lighten; */
+    
+// }
