--- a/style.css
+++ b/style.css
@@ -4,16 +4,12 @@
 }
 
 body {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: url("../images/ofis.png"), rgba(0, 0, 0, 0.6);
-  /* ,url("https://picsum.photos/800/600?random=2"); */
+  background: url("https://images.unsplash.com/photo-1497215842964-222b430dc094?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80"), rgba(0, 0, 0, 0.5);
   background-size: cover;
   background-blend-mode: multiply;
-  /* background-blend-mode: lighten; */
+}
+body h3 {
+  text-align: center;
 }
 
 .navbar {
